# water-margin-story

./: .env.example  .gitignore  .vercelignore  README.md  bug_fix_report.txt  build.py  dev_smoke_test.py  main.py  pyproject.toml  vercel.json
.github/: copilot-instructions.md
agents/: __init__.py  advisor_agent.py  gao_qiu_agent.py  hero_agent.py
api/: game.py  requirements.txt
config/: events.yaml  factions.yaml  heroes.yaml  llm_config.py  maps.yaml  scenarios.yaml  towns.yaml
dev_crew/: __init__.py  agents.py  crew.py  tasks.py
game/: combat_manager.py  engine.py  event_system.py  turn_manager.py
models/: __init__.py  army.py  event.py  faction.py  game_state.py  hero.py  map.py  town.py
public/: app.js  index.html  style.css
tasks/: __init__.py  combat_task.py  investigation_task.py  movement_task.py
tests/: test_config_yaml.py  test_engine.py  test_models.py  test_turn_manager.py
tools/: MovementTool.py  __init__.py  combat_tool.py  file_tools.py  investigation_tool.py  movement_tool.py  python_runner_tool.py
ui/: terminal_ui.py
